completely re-worked for python-fonts

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,5 +1,5 @@
 {
-    "address": "/dev/tty.usbserial-DO00372B",
+    "address": "/dev/tty.usbserial-DQ008C42",
     "username": "micro",
     "password": "python",
     "sync_folder": "",
